--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,15 +1,19 @@
-# ===== Stage 1: Build =====
+# Stage 1: Build React app
 FROM node:18-alpine AS builder
 WORKDIR /app
+
 COPY package*.json ./
 RUN npm install
+
 COPY . .
 RUN npm run build
 
-# ===== Stage 2: Serve =====
+# Stage 2: Serve build using `serve`
 FROM node:18-alpine
 WORKDIR /app
+
 RUN npm install -g serve
 COPY --from=builder /app/dist ./dist
+
 EXPOSE 4173
 CMD ["serve", "-s", "dist", "-l", "4173"]
