--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,8 @@
 
 FRONTEND_ORIGIN=http://localhost:4173
 PORT=4000
+VITE_API_BASE=http://13.62.126.189:4000
+
 
 MONGO_URI=mongodb://mongo:27017
 MONGO_DBNAME=quizi
