--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongodb": "^5.7.0",
     "node-fetch": "^2.6.9",
-    "uuid": "^9.0.0",
-    "mongodb": "^5.7.0"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
